Created empty folders and files for HTML templates

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,11 +21,8 @@
                 <li>Add transaction button</li>
                 <li>Add/edit company</li>
                 <li>Add/edit category</li>
-
+                <!-- Add category icon if possible - if else block-->
             </ul>
-
         </nav>
-
-
     </aside>
 {% endblock  %}
