Created method for totalling transactions and posted result to homepage route

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <header>
-    <h2>Blue subheader here - bring it transaction total</h2>
+    <h2>Total spend: {{ total }}</h2>
 </header>
  <!-- Add category icon if possible - if else block -->
 {% for transaction in all_transactions %}
