--- a/templates/add-transaction.html
+++ b/templates/add-transaction.html
@@ -4,7 +4,7 @@
 <form action="/" method="POST">
     <div>
         <label for="amount">Amount spent: </label>
-        <input type="number" id="amount" name="amount" placeholder="amount" required>
+        <input type="number" id="amount" name="amount" placeholder="0.00" step="0.01" min="0" required>
     </div>
 
     <div>
