Added some internal hyperlinks

--- a/templates/add-transaction.html
+++ b/templates/add-transaction.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
+<header>
+    <h2>Add transaction</h2>
+</header>
 <form action="/" method="POST">
     <div>
         <label for="amount">Amount spent: </label>
