--- a/templates/index.html
+++ b/templates/index.html
@@ -18,9 +18,9 @@
     <aside>
         <nav>
             <ul>
-                <li>Add transaction button</li>
-                <li>Add/edit company</li>
-                <li>Add/edit category</li>
+                <li><a href="/add-transaction">Add transaction</a></li>
+                <li><a href="/companies">Update companies</a></li>
+                <li>Update categories</li>
             </ul>
         </nav>
     </aside>
