Added some internal links

--- a/templates/categories/index.html
+++ b/templates/categories/index.html
@@ -16,7 +16,7 @@
     <aside>
         <nav>
             <ul>
-                <li>Add category</li>
+                <li><a href="/categories/add">Add category</a></li>
                 <li><a href="/">View transactions</a></li>
             </ul>
         </nav>
