--- a/templates/companies/index.html
+++ b/templates/companies/index.html
@@ -16,7 +16,7 @@
     <aside>
         <nav>
             <ul>
-                <li>Add company</li>
+                <li><a href="/companies/add">Add company</a></li>
                 <li><a href="/">View transactions</a></li>
             </ul>
         </nav>
