Added template for editing categories. Added link to categories page from homepage

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="/add-transaction">Add transaction</a></li>
                 <li><a href="/companies">Update companies</a></li>
-                <li>Update categories</li>
+                <li><a href="/categories">Update categories</a></li>
             </ul>
         </nav>
     </aside>
