--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <h1>cash flow => </h1>
+        <h1><a href="/">cash flow => </a></h1>
     </header>
     <main>
         {% block content %}
