--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,7 @@
 body > header > h1 {
     font-family: 'Zilla Slab Highlight', cursive;
     font-size: 3em; 
+    padding: 20px;
 }
 
 body > header > h1 > a {
@@ -13,4 +14,8 @@ body > header > h1 > a:visited {
 
 body > main {
     font-family: 'Merriweather Sans', sans-serif;
+}
+
+body {
+    display: grid;
 }
