Styling green buttons

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,9 +23,9 @@
 <aside>
     <nav>
         <ul>
-            <li><a href="/add-transaction">Add transaction</a></li>
-            <li><a href="/companies">Update companies</a></li>
-            <li><a href="/categories">Update categories</a></li>
+            <li><h3><a href="/add-transaction">Add transaction</a></h3></li>
+            <li><h3><a href="/companies">Update companies</a></h3></li>
+            <li><h3><a href="/categories">Update categories</a></h3></li>
         </ul>
     </nav>
 </aside>
