--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,6 +6,7 @@ body > header > h1 {
     font-family: 'Zilla Slab Highlight', cursive;
     font-size: 3em; 
     padding: 20px;
+    margin-left: 20px;
 }
 
 body > header > h1 > a {
@@ -51,10 +52,11 @@ ul {
     padding: 10px;
     margin: 20px;
     background-color: #e5e5e5;
+    border-radius: 0.5em;
 }
 
 .transaction-list > ul {
-    text-align: left;
+    text-align: center;
     margin: 0;
     padding: 0;
     /* display: grid;
@@ -67,4 +69,17 @@ ul {
     display: inline;
     padding: 5px;
     /* flex-basis: auto; */
+}
+
+aside > nav > ul {
+    margin: 5%;
+}
+aside > nav > ul> li {
+    color: white;
+    padding: 8px;
+    border: none;
+    background-color: #457d17;
+    border-radius: 3px;
+    margin: 10px;
+    text-align: center;
 }
