--- a/templates/add-transaction.html
+++ b/templates/add-transaction.html
@@ -31,7 +31,9 @@
         </select>
         </div>
         
-    <button type="submit">Add transaction</button>
+        <ul>
+            <li class="green-button"><h3><a href="/add-transaction">Add transaction</a></h3></li>
+        </ul>
    
 </form>   
 
