--- a/templates/add-transaction.html
+++ b/templates/add-transaction.html
@@ -30,10 +30,12 @@
             {% endfor %}
         </select>
         </div>
-        
-        <ul>
+        <button type="submit">Add transaction</button>
+        <!-- <ul>
+            <button type="submit">
             <li class="green-button"><h3><a href="/add-transaction">Add transaction</a></h3></li>
-        </ul>
+            </button>
+        </ul> -->
    
 </form>   
 
