--- a/templates/companies/index.html
+++ b/templates/companies/index.html
@@ -13,8 +13,8 @@
                     <td>
                         {{ company.name }}
                     </td>
-                    <td class="small-edit-button">
-                        <a href="/companies/{{ company.id }}/edit">Edit company</a> 
+                    <td>
+                        <a class="small-edit-button" href="/companies/{{ company.id }}/edit">Edit company</a> 
                     </td>
                 </tr>
                 {% endfor %}
