--- a/static/css/main.css
+++ b/static/css/main.css
@@ -65,21 +65,6 @@ tbody tr:nth-child(even) {
     background-color: #cecece;
   }
 
-.small-edit-button {
-    color: fff;
-    background-color: #ba3b3b;
-    width: 23%;
-}
-
-.small-edit-button:hover {
-    background-color: #942f2f;
-}
-
-.small-edit-button:visited {
-    text-decoration: none;
-}
-
-
 aside > nav {
     margin-top: 30%;
     margin-right: 8%;
@@ -89,33 +74,6 @@ aside > nav {
 
 aside > nav > ul {
     margin: 5%;
-}
-.green-button a {
-    display: block;
-    color: white;
-    padding: 12px;
-    border: none;
-    background-color: #457d17;
-    border-radius: 3px;
-    text-align: center;
-}
-
-.green-button a:hover {
-    background-color: #3e7014;
-}
-
-.blue-button a {
-    display: block;
-    color: white;
-    padding: 12px;
-    border: none;
-    background-color: #2d4059;
-    border-radius: 3px;
-    text-align: center;
-}
-
-.blue-button a:hover {
-    background-color: #243347;
 }
 
 a:link {
@@ -139,7 +97,7 @@ a:visited {
     margin-bottom: 20%;
 }
 
-input, select, textarea {
+input, select, textarea, button {
     font-family: inherit;
     font-size: 100%;
     box-sizing: border-box;
