Basic styling applied to all pages

--- a/templates/add-transaction.html
+++ b/templates/add-transaction.html
@@ -5,7 +5,7 @@
     <h2>Add transaction</h2>
 </header>
 
-<article class="add-transaction-form" grid-area: article>
+<article class="grey-centered-form" grid-area: article>
 
 <form action="/" method="POST">
     <div>
