--- a/templates/categories/add.html
+++ b/templates/categories/add.html
@@ -4,8 +4,8 @@
 <header>
     <h2>Add a category</h2>
 </header>
-
-<form action="/categories" method="POST">   
+<article class="grey-centered-form" grid-area: article>
+    <form action="/categories" method="POST">   
 
     <div>
         <label for="category">Spend category: </label>
@@ -14,6 +14,6 @@
     
     <button type="submit">Add category</button>
     
-</form>    
-
+    </form>    
+</article>
 {% endblock  %}
