--- a/templates/categories/edit.html
+++ b/templates/categories/edit.html
@@ -3,14 +3,15 @@
 <header>
     <h2>Edit category</h2>
 </header>    
-<form action="/categories/{{ tag.id }}" method="POST">
-    <div>
-        <label for="category">Spend category: </label>
-        <input type="text" id="category" name="category" value="{{ tag.category }}">
-    </div>
-
-    <button type="submit">Update category</button>
-
-</form>
-
+<article class="grey-centered-form" grid-area: article>
+    <form action="/categories/{{ tag.id }}" method="POST">
+        <div>
+            <label for="category">Spend category: </label>
+            <input type="text" id="category" name="category" value="{{ tag.category }}">
+        </div>
+    
+        <button type="submit">Update category</button>
+    
+    </form>
+</article>
 {% endblock %}
