--- a/templates/companies/add.html
+++ b/templates/companies/add.html
@@ -4,8 +4,8 @@
 <header>
     <h2>Add a company</h2>
 </header>
-
-<form action="/companies" method="POST">   
+<article class="grey-centered-form" grid-area: article>
+    <form action="/companies" method="POST">   
 
     <div>
         <label for="company">Company name: </label>
@@ -14,6 +14,6 @@
     
     <button type="submit">Add company</button>
     
-</form>    
-
+    </form>    
+</article>
 {% endblock  %}
