--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,6 +14,10 @@ main {
     grid-template-columns: 6fr 3fr;
 }
 
+article {
+  justify-content: center;
+}
+
 ul {
     list-style: none;
 }
@@ -85,44 +89,3 @@ a:visited {
     text-decoration: none;
     color: #fff;
 }
-
-.add-transaction-form {
-    background-color: #e5e5e5;
-    width: 350px;
-    padding: 10px;
-    display: flex;
-    justify-self: right;
-    margin-top: 20px;
-    border-radius: 0.3rem;
-    margin-bottom: 20%;
-}
-
-input, select, textarea, button {
-    font-family: inherit;
-    font-size: 100%;
-    box-sizing: border-box;
-    width: 100%;
-    padding: 10px;
-    margin: 10px;
-    box-sizing: border-box;
-    border-radius: 0.3rem;
-  }
-
-  input[type=text] {
-    padding:10px;
-    border:0;
-    box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
-  }
-
-  input[type=number] {
-    padding:10px;
-    border:0;
-    box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
-  }
-
-  select {
-    padding: 10px;
-    border: 0;
-    box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
-    margin: 5px;
-  }
