--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <header>
-    <h2>Total spend: {{ total }}</h2>
+    <h2>Total spend: £{{ total }}</h2>
 </header>
 <!-- Add category icon if possible - if else block -->
 
