--- a/static/css/forms.css
+++ b/static/css/forms.css
@@ -10,6 +10,20 @@
     margin-bottom: 20%;
 }
 
+.enter-budget {
+  background-color: #e5e5e5;
+    width: 250px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 16px;
+    display: flex;
+    justify-self: right;
+    margin-top: 5px;
+    margin-left: 10%;
+    margin-right: 5%;
+    border-radius: 0.3rem;
+}
+
 input, select, textarea, button {
     font-family: inherit;
     font-size: 100%;
@@ -17,7 +31,6 @@ input, select, textarea, button {
     width: 100%;
     padding: 10px;
     margin: 10px;
-    box-sizing: border-box;
     border-radius: 0.3rem;
   }
 
