--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,18 @@
 {% block content %}
 <header>
     <h2>Total spend: £{{ total }}</h2>
+    <form class="enter-budget" action="/" method="POST">
+        <div>
+            <label for="amount">Set a budget: </label>
+            <input type="number" id="budget" name="budget" placeholder="0.00" step="0.01" min="0">
+        </div>
+    </form>
 </header>
 <!-- Add category icon if possible - if else block -->
 
 <article class="transaction-list">
-<table>
+  
+    <table>
     <thead>
         <tr>
           <th>Company</th>
@@ -36,11 +43,13 @@
 
 <aside>
     <nav>
+        
         <ul>
             <li class="green-button"><h3><a href="/add-transaction">Add transaction</a></h3></li>
             <li class="green-button"><h3><a href="/companies">Update companies</a></h3></li>
             <li class="green-button"><h3><a href="/categories">Update categories</a></h3></li>
         </ul>
     </nav>
+    
 </aside>
 {% endblock %}
