Added font awesome icons to butons

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -18,12 +18,13 @@ main > header {
     padding: 10px;
     width: 100%;
     grid-area: blue-header;
-    display: flex;
+    /* display: flex; */
 }
 
 main > header > h2 {
     color: #fff;
     font-size: 3em;
-    justify-self: flex-start;
+    text-align: center;
+    /* justify-self: center; */
     padding-left: 5%;
 }
