--- a/templates/add-transaction.html
+++ b/templates/add-transaction.html
@@ -30,7 +30,7 @@
             {% endfor %}
         </select>
         </div>
-        <button type="submit">Add transaction</button>
+        <button type="submit"><i class="fas fa-plus"></i> Add transaction</button>
    
 </form>   
 
