--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/forms.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/tablet.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/mobile.css') }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://kit.fontawesome.com/5d6f769005.js" crossorigin="anonymous"></script>
     <title>Cash Flow: track your spending</title>
 </head>
 
