--- a/templates/categories/add.html
+++ b/templates/categories/add.html
@@ -12,7 +12,7 @@
         <input type="text" id="category" name="category" placeholder="e.g. childcare" required>
     </div>
     
-    <button type="submit">Add category</button>
+    <button type="submit"><i class="fas fa-plus"></i> Add category</button>
     
     </form>    
 </article>
