--- a/templates/categories/index.html
+++ b/templates/categories/index.html
@@ -14,7 +14,7 @@
                         {{ tag.category }}
                     </td>
                     <td>
-                        <a class="small-edit-button" href="/categories/{{ tag.id }}/edit">Edit category</a>
+                        <a class="small-edit-button" href="/categories/{{ tag.id }}/edit"><i class="fas fa-pen fa-xs"></i> Edit category</a>
                     </td>
                 </tr>
                 {% endfor %}
@@ -27,8 +27,8 @@
     <aside>
         <nav>
             <ul>
-                <li class="green-button"><h3><a href="/categories/add">Add category</a></h3></li>
-                <li class="blue-button"><h3><a href="/">View transactions</a></h3></li>
+                <li class="green-button"><h3><a href="/categories/add"><i class="fas fa-plus"></i> Add category</a></h3></li>
+                <li class="blue-button"><h3><a href="/"><i class="fas fa-chart-line"></i> View transactions</a></h3></li>
             </ul>
         </nav>
     </aside>
