--- a/templates/companies/add.html
+++ b/templates/companies/add.html
@@ -12,7 +12,7 @@
         <input type="text" id="name" name="name" placeholder="Please enter a name" required>
     </div>
     
-    <button type="submit">Add company</button>
+    <button type="submit"><i class="fas fa-plus"></i> Add company</button>
     
     </form>    
 </article>
