--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -1,6 +1,7 @@
 @media (max-width: 929px) {
 
 main {
+    font-family: 'Merriweather Sans', sans-serif;
     display: grid;
     grid-template-areas: 
     'blue-header'
@@ -8,6 +9,13 @@ main {
     'aside';
 }
 
+main > header > h2 {
+    color: #fff;
+    font-size: 2.5em;
+    text-align: center;
+    /* justify-self: center; */
+    padding-left: 5%;
+}
 /* .enter-budget {
     grid-area: budget;
 } */
