--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,13 @@
 {% block content %}
 <header>
     <h2>Total spend: £{{ total }}</h2>
-    <form class="enter-budget" action="/" method="POST">
+    <!-- <form class="enter-budget" action="/" method="POST">
         <div>
             <label for="amount">Set a budget: </label>
             <input type="number" id="budget" name="budget" placeholder="0.00" step="0.01" min="0">
         </div>
-    </form>
+        <button type="submit">Add budget</button>
+    </form> -->
 </header>
 <!-- Add category icon if possible - if else block -->
 
@@ -45,9 +46,9 @@
     <nav>
         
         <ul>
-            <li class="green-button"><h3><a href="/add-transaction">Add transaction</a></h3></li>
-            <li class="green-button"><h3><a href="/companies">Update companies</a></h3></li>
-            <li class="green-button"><h3><a href="/categories">Update categories</a></h3></li>
+            <li class="green-button"><h3><a href="/add-transaction"><i class="fas fa-plus"></i> Add transaction</a></h3></li>
+            <li class="green-button"><h3><a href="/companies"><i class="fas fa-pen fa-xs"></i> Update companies</a></h3></li>
+            <li class="green-button"><h3><a href="/categories"><i class="fas fa-pen fa-xs"></i> Update categories</a></h3></li>
         </ul>
     </nav>
     
