--- a/static/css/forms.css
+++ b/static/css/forms.css
@@ -12,15 +12,15 @@
 
 .enter-budget {
   background-color: #e5e5e5;
-    width: 250px;
+    width: 200px;
     padding-left: 16px;
     padding-right: 16px;
     padding-top: 16px;
     display: flex;
+    flex-wrap: wrap;
     justify-self: right;
     margin-top: 5px;
     margin-left: 10%;
-    margin-right: 5%;
     border-radius: 0.3rem;
 }
 
