--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <header>
-    <h2>Total spend: £{{ total }}</h2>
+    <h2>Total spend: {{ total }}</h2>
     <!-- <form class="enter-budget" action="/" method="POST">
         <div>
             <label for="amount">Set a budget: </label>
@@ -44,12 +44,20 @@
 
 <aside>
     <nav>
-        
         <ul>
             <li class="green-button"><h3><a href="/add-transaction"><i class="fas fa-plus"></i> Add transaction</a></h3></li>
             <li class="green-button"><h3><a href="/companies"><i class="fas fa-pen fa-xs"></i> Update companies</a></h3></li>
             <li class="green-button"><h3><a href="/categories"><i class="fas fa-pen fa-xs"></i> Update categories</a></h3></li>
-        </ul>
+       
+        <li>
+            <form class="enter-budget" action="/" method="POST">
+                    <label for="amount">Set a budget: </label>
+                    <input type="number" id="budget" name="budget" placeholder="0.00" step="0.01" min="0">
+                <button type="submit" class="add-budget-button">Add budget</button>
+            </form>
+
+        </li> 
+    </ul>
     </nav>
     
 </aside>
