--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
         </tr>
       </thead>
     <tbody>
-        {% for transaction in all_transactions %}
+        {% for transaction in all_transactions|reverse %}
     <tr>  
         <td>
             {{ transaction.company.name }}
