--- a/static/css/header.css
+++ b/static/css/header.css
@@ -28,3 +28,16 @@ main > header > h2 {
     /* justify-self: center; */
     padding-left: 5%;
 }
+
+main > header > h3 {
+    font-size: 2em;
+}
+.red {
+    color: red;
+    text-align: center;
+}
+
+.green {
+    color: green;
+    text-align: center;
+}
