--- a/templates/add-transaction.html
+++ b/templates/add-transaction.html
@@ -7,7 +7,7 @@
 
 <article class="grey-centered-form" grid-area: article>
 
-<form action="/" method="POST">
+<form action="/add-transaction/new" method="POST">
     <div>
         <label for="amount">Amount spent: </label>
         <input type="number" id="amount" name="amount" placeholder="0.00" step="0.01" min="0" required>
